--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://Amit-Sarode.github.io",
   "name": "amit-sarode",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
+
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
